# psychedelic_image_generator

./: Cargo.toml  LICENSE
src/: funcs.rs  image_generator.rs  input.rs  main.rs  options.rs
src/generator/: funcs.rs  image_generator.rs  mod.rs  wallpaper.rs
