[package]
name = "psychedelic_image_generator"
version = "0.1.0"
authors = ["Alex Meli <alexmeli100@gmail.com>"]
edition = "2018"

[dependencies]
image = "0.21.1"
rand = "0.6.5"
itertools = "0.8.0"
rayon = "1.0.3"
indicatif = {version = "*", features = ["rayon"]}
structopt = "0.2.17"
log = "0.4.0"
env_logger = "0.7.1"
uuid = { version = "0.8", features = ["v4"] }
winapi = { version = "0.3.9", features = ["winuser"] }